[aliases]
test = pytest

[metadata]
name = txppb
author = Moshe Zadka
author_email = moshez@zadka.club
description = Twisted support for PursuedPyBear
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moshez/txppb
license = Artistic-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: Artistic License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages =
    txppb

setup_requires =
    wheel
    setuptools_scm

python_requires = >= 3.6
